bootmenu: fix initial Current selection

Resets the initial boot partition displayed

Fixes #17069

Change-Id: I42f6ecbad57d7d6b21bfbde2645f1d7112d650b8